overflow fix, removed sounds, a+

--- a/frontend/src/static/css/home/home.css
+++ b/frontend/src/static/css/home/home.css
@@ -48,7 +48,7 @@
 .custom-alert{
     color: white;
     border: 2px solid var(--br-dark);
-    border-radius: 20%;
+    border-radius: 10px;
     background-color: var(--br-dark);
     position: absolute;
     height: 30px;
@@ -62,7 +62,7 @@
     justify-content: center;
     align-items: center;
     animation: fadeOut 5s forwards; /* Añade la animación */
-
+    z-index: 800;
 }
 @keyframes fadeOut {
     0% {
